# ats-score-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  specs.md  tasks.md  tool.spec
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
ats_score/: __init__.py  checks_ats.py  checks_content.py  cli.py  core.py  extract.py  paths.py  report.py  similarity.py  tomd.py  writing.py
ats_score/data/: skills.txt
examples/: job_description_template.txt
tests/: test_checks.py  test_core.py  test_writing.py
